--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/lua"]
 	path = external/lua
 	url = https://github.com/lubgr/lua-cmake
+[submodule "external/raylib"]
+	path = external/raylib
+	url = https://github.com/raysan5/raylib
