--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 include(CMakePrintHelpers)
 
-set(TARGET PSV)
+set(TARGET PC)
 
 if(${TARGET} STREQUAL "PSV")
   if(DEFINED ENV{VITASDK})
